--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,10 @@ h1 {
     font-size: 40px;
     
 }
-
-/* make h1 and nav not move when scrolling */
-/* .header {
-    position: fixed;  
-    top: 0; 
-    right: 0;         
-    width: 100%;      
-    background-color: rgb(249, 247, 234); 
-    z-index: 1000;    
-} */
+ ul, ol{
+    list-style-position: inside;
+    margin-left: 2px;
+ }
 
 
 
